# CSC3060_Project5_Code_Optimization

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  perfUsage.md
include/: aos_soa.h  bench.h  bitwise.h  blackscholes.h  filter_gradient.h  graph.h  matmul.h  relu.h  sparse_spmm.h  trace_replay.h
src/kernel/: aos_soa.cpp  bitwise.cpp  blackscholes.cpp  filter_gradient.cpp  graph.cpp  image_proc.cpp  matmul.cpp  relu.cpp  sparse_spmm.cpp  trace_replay.cpp
src/main/: run_all.cpp  single_bench.cpp
